--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,14 @@
     <!-- dependencies -->
   </head>
   <body>
-    
+
     <div id="main">
       <!-- Your HTML goes here! -->
       <input class="userMsg" type="text" placeholder="Message"></input>
       <button id="send" class="btn btn-primary">Send Message</button>
       <input class="userRoom" type="text" placeholder="Choose Your ChatRoom"></input>
       <button id="choose-room" class="btn btn-warning">Select Room</button>
+      <span id="typing-message"></span>
       <ul id="message-list"></ul>
     </div>
 
